basic html for landing page

--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 
     </head>
     <body>
+        <h1>gitGant... a new way to plan your week</h1>
+        <p>When working on short term projects, it is often a challenge to plan tasks and measure progress. 
+            gitGantt allows you to incorporate Gantt charts with regular day-to-day to-do lists to provide 
+            you with the ultimate way of keeping your projects on schedule. With gitGantt you can add, remove, and edit tasks</p>
         <div id="gantt-chart"></div>
     </body>
