--- a/example.html
+++ b/example.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script src="gitGantt.js" defer></script>
+        <script src="extra.js" defer></script>
         <link rel="stylesheet" type="text/css" href="gitGantt.css">
     </head>
     <body>
