finished editing tasks

--- a/pub/index.html
+++ b/pub/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script type = "text/javascript" src="gitGantt.js" defer></script>
-        <script type = "text/javascript" src="index.js" defer></script>
+        <script type = "text/javascript" src="./gitGantt/gitGantt.js" defer></script>
+        <script type = "text/javascript" src="./examples/index.js" defer></script>
 
     </head>
     <body>
