--- a/pub/index.html
+++ b/pub/index.html
@@ -14,8 +14,12 @@
         <div\>
         <p>
             When you first create a Gantt chart, an empty Gantt chart is created with the top row signifying 
-            the days of the week separated by lines.
+            the days of the week separated by lines. You can see that the Gantt chart is pretty small. Add tasks to it to make it larger!
         </p>
 
         <div id="gantt-chart"></div>
+        <br/>
+        <p>Let's add some more tasks!</p>
+
+        <div id="adding-tasks"></div>
     </body>
