--- a/pub/gitGantt/documentation.html
+++ b/pub/gitGantt/documentation.html
@@ -6,25 +6,32 @@
 
     </head>
     <body>
-        <h1>gitGantt... a new way to plan your week</h1>
+        <h1>Documentation for: gitGantt... a new way to plan your week</h1>
         <p>When working on short term projects, it is often a challenge to plan tasks and measure progress. 
             gitGantt allows you to incorporate Gantt charts with regular day-to-day to-do lists to provide 
             you with the ultimate way of keeping your projects on schedule. With gitGantt you can add, remove, and edit tasks
         </p>
         <div\>
         <p>
-            When you first create a Gantt chart, an empty Gantt chart is created with the top row signifying 
-            the days of the week separated by lines. You can see that the Gantt chart is pretty small. Add tasks to it to make it larger!
+            To run the library please include the following lines to your script tag in your header tag in your HTML document as follows:
         </p>
 
-        <div id="gantt-chart"></div>
+        <div id="include-script"></div>
         <br/>
-        <p>Let's add some more tasks!</p>
+        <p>An external JavaScript file is required to be able to use this library. 
+            Please make sure you include this file in your script tag. In the above example, 
+            the gitGantt objects are loaded into the main HTML file using index.js</p>
 
-        <div id="adding-tasks"></div>
+        <br/>
+        <h3> Creating an empty gitGantt chart</h3>
+        <p> To create an empty gitGantt chart, please call the constructor with no parameters. An example is provided below:</p>
+
+        <div id="create-empty_chart"></div>
+
+        <br/>
 
         <p>
-            Now that we have some tasks in place, we can delete and also change the names and start/end days of them!
+            
         </p>
         <br/>
 
