finished landing page

--- a/pub/index.html
+++ b/pub/index.html
@@ -3,15 +3,21 @@
     <head>
         <script type = "text/javascript" src="./gitGantt/gitGantt.js" defer></script>
         <script type = "text/javascript" src="./examples/index.js" defer></script>
+        <link rel="stylesheet" href="./examples/index.css">
 
     </head>
     <body>
+        <div id="heading">
         <h1>gitGantt... a new way to plan your week</h1>
+        <h3>created by: bianca pokhrel</h3>
         <p>When working on short term projects, it is often a challenge to plan tasks and measure progress. 
             gitGantt allows you to incorporate Gantt charts with regular day-to-day to-do lists to provide 
             you with the ultimate way of keeping your projects on schedule. With gitGantt you can add, remove, and edit tasks
         </p>
-        <div\>
+        </div>
+        <br/>
+        <br/>
+        <br/>
         <p>
             When you first create a Gantt chart, an empty Gantt chart is created with the top row signifying 
             the days of the week separated by lines. You can see that the Gantt chart is pretty small. Add tasks to it to make it larger!
@@ -30,7 +36,7 @@
 
         <p>
             Lastly, we can change our themes. In this version of the library, we have 4 available themes including the default theme.
-            You can choose additional presents such as "summer day", "autumn morning", and "winter night". Here they are in order below!
+            You can choose additional presets such as "summer day", "autumn morning", and "winter night". Here they are in order below!
         </p>
 
         <div id="summer-day-theme"></div>
@@ -43,9 +49,11 @@
         <br/>
         <br/>
 
-        <p>
+        <h2>
             I hope you enjoy using this library! Please find the documentation at the link below:
-        </p>
+        </h2>
 
-        <h4>
+        <div id="footer">
+            <a href="./gitGantt/documentation.html"><h3>gitGantt Home</h3></a>
+        </div>
     </body>
