--- a/pub/gitGantt/documentation.html
+++ b/pub/gitGantt/documentation.html
@@ -16,13 +16,11 @@
         </p>
 
         <div class="coding-look">
-            <p>
                 head <br/>
                     script type = "text/javascript" src="./gitGantt/gitGantt.js" defer> /script <br/>
                     script type = "text/javascript" src="./examples/index.js" defer> /script <br/>
             
                 head <br/>
-            </p>
         </div>
         <br/>
         <p>An external JavaScript file is required to be able to use this library. 
@@ -68,10 +66,16 @@
 
         <div class="coding-look">
 
+            var addingTasksGantt = new gitGantt(); <br/>
+            console.log(addingTasksGantt) <br/>
+            document.querySelector('#adding-tasks').appendChild(addingTasksGantt.chart_setup) <br/>
+            addingTasksGantt.addTask('mon-wed', "Work on final report for BCB430") <br/>
+            addingTasksGantt.deleteTask(0) <br/>
+
         </div>
         <br/>
 
-        <h3> chart.editTasks(taskID)</h3>
+        <h3> chart.editTask(taskID)</h3>
         <p>
             The editTasks method in gitGantt allows developers to quickly and efficiently edit tasks in their gitGantt chart. 
             To edit a task, simply include the taskID you want to edit, and either the duration you want to edit or the task name you want to edit or both! 
@@ -79,7 +83,13 @@
             See the example below:
         </p>
 
-        <div class="coding-look"></div>
+        <div class="coding-look">
+            var addingTasksGantt = new gitGantt(); <br/>
+            console.log(addingTasksGantt) <br/>
+            document.querySelector('#adding-tasks').appendChild(addingTasksGantt.chart_setup) <br/>
+            addingTasksGantt.addTask('mon-wed', "Work on final report for BCB430") <br/>
+            addingTasksGantt.editTask(0, "tues1-thurs1", "Finish ggplots") <br/>
+        </div>
         <br/>
 
         <h3> chart.changeTheme(themeName)</h3>
@@ -101,4 +111,8 @@
             I hope you enjoy using this library! Please find the landing page at the link below:
         </p>
 
+
+        <div id="footer">
+            <a href="../index.html"><h3>gitGantt Home</h3></a>
+        </div>
     </body>
