--- a/pub/index.html
+++ b/pub/index.html
@@ -54,6 +54,6 @@
         </h2>
 
         <div id="footer">
-            <a href="./gitGantt/documentation.html"><h3>gitGantt Home</h3></a>
+            <a href="./gitGantt/documentation.html"><h3>Documentation</h3></a>
         </div>
     </body>
